--- a/Invoice.html
+++ b/Invoice.html
@@ -19,6 +19,7 @@
             font-family: 'Times New Roman', Times, serif;
             font-size: 15px;
             margin: 0px;
+            line-height:24px;
         }
 
         .blue{
