--- a/Invoice.html
+++ b/Invoice.html
@@ -23,7 +23,7 @@
         }
 
         .blue{
-            background-color: lightskyblue;
+            background-color: rgb(157, 215, 252);
             text-align: left;
         }
     </style>
