--- a/YT_video.html
+++ b/YT_video.html
@@ -12,8 +12,8 @@
 
          <iframe width="711" height="400" src="https://www.youtube.com/embed/i5u_Ky2jpGg" 
          frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-         allowfullscreen></iframe>
+         allowfullscreen> </iframe>
 
-         <!--To Play this YT Video you need online server. YT not supports the local server.-->
+         <!--To Play this YT Video you need online server. YT not supports the local server. Run it on online sandbox-->
 </body>
 </html>
