--- a/add_URL.html
+++ b/add_URL.html
@@ -15,6 +15,6 @@
              <!-- for opening URL on new tag use target attribute "BLANK" in 
             anchor tag-->
 
-        <a href="https://open.spotify.com/" target="blank">SpotiFy (open URL in new tab)</a>
+        <a href="https://open.spotify.com/" target="blank">SpotiFy Online (open URL in new tab)</a>
     </body>
 </html>
